@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-12T16:24:10Z",
+  "timestamp" : "2022-07-13T01:27:00Z",
   "count_outdated" : 406,
   "uniques_outdated" : 78,
-  "count" : 415,
-  "uniques" : 83,
+  "count" : 416,
+  "uniques" : 84,
   "views" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -28,10 +28,10 @@
     },
     {
       "timestamp": "2022-07-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
