@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 5,
+  "count": 10,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -19,8 +19,8 @@
     },
     {
       "timestamp": "2022-07-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
