@@ -1,3 +1,10 @@
+2022-07-13T01:27:00Z:
+* notice: last 14d: unq all: 6 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 78 406 / 83 415
+* notice: next accum: outdated-unq outdated-all / unq all: 78 406 / 84 416
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-07-12]
+
 2022-07-12T16:24:10Z:
 * notice: last 14d: unq all: 5 9
 * notice: prev accum: outdated-unq outdated-all / unq all: 78 406 / 82 414
